# storix

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  env.example  justfile  pyproject.toml  release-notes.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: workflow_request.yml  workflows.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  create-draft-release.yml  prepare-release.yml  release.yml
bench/: README.md  listing.py  transfer.py
benchmarks/: README.md  bench_listing.py
docs/: roadmap.md
docs/adr/: 0001-hexagonal-architecture.md  0002-async-first-codegen.md  0003-port-design.md  0004-error-taxonomy.md  0005-unix-first-api.md  0006-concurrency-shim.md  0007-capabilities.md  0008-layers.md  0009-config-factory.md  0010-metadata-and-urls.md  0011-workspaces.md  0012-rejected-and-deferred.md  0013-combinators-over-flags.md  0014-cache-layer.md  0015-cli-layers.md  0016-removable-layers.md  0017-streaming-boundary.md  0018-when-missing-infers-capability.md  0019-observability-layer-progress.md  0020-external-backend-adapter.md  0021-versioning-policy.md  0022-cli-config-prefs-and-layers.md  0023-rich-lazy-directory-listing.md  0024-azblob-presign-with-account-key.md  0025-sync-concurrency-via-thunks.md  0026-recursive-walk-find-glob.md  0027-listing-performance.md  0028-concurrent-recursive-traversal.md  0029-transfer-setup-and-storage-root-diagnostics.md  0030-storage-root-provisioning.md  0032-parallel-range-reads.md  README.md
docs/design/: 0.2.0-handoff.md  architecture.md  deferred-decisions.md
docs/superpowers/specs/: 2026-07-10-hexagonal-architecture-design.md
examples/: azure_echo.py  local_chroot.py
examples/local/: find.py
release/: README.md  __init__.py  prepare.py
samples/: azure_echo.py  local.py  local_async.py  local_chroot.py  local_cp.py  local_echo.py  local_mv.py  local_rm.py  local_rmdir.py  local_sandboxed.py  navigation.py  observability_progress.py  quickstart.py  quickstart_async.py  s3_backend.py  sandboxed_audit.py  storix.toml.example  switch_providers.py
samples/cloud/: du.py  du_async.py  stat.py  stat_async.py  tree.py  tree_async.py
samples/layers/: cache_store.py  configurable_cache.py  custom_url_layer.py  extend_cache.py
samples/local/: du.py  du_async.py  find.py  stat.py  stat_async.py  tree.py  tree_async.py
samples/plugins/: byo_backend.py  byo_config.py
samples/recipes/: caching_redis.py  caching_redis_raw.py  custom_layer.py  deterministic_streaming.py  fastapi_di.py  settings.py  testing_storix.py  ytdlp_streaming.py
scripts/: brand  clean  coverage  dev  format  lint  release.py  smoke  unasync.py
src/storix/: __init__.py  __main__.py  _dto.py  config.py  constants.py  enums.py  errors.py  models.py  pathops.py  sandbox.py  serialization.py  settings.py  types.py  typing.py  utils.py
src/storix/_async/: __init__.py  _compat.py  _stream.py  core.py  factory.py  layers.py  temporary.py
src/storix/_async/backends/: __init__.py  _proto.py  azblob.py  azure.py  base.py  gcs.py  generic.py  local.py  memory.py  opendal.py  s3.py
src/storix/_async/layers/: __init__.py  base.py  cache.py  metadata.py  native.py  observability.py  sandbox.py  url.py
src/storix/_internal/: _lazy.py
src/storix/_sync/: __init__.py  _compat.py  _stream.py  core.py  factory.py  layers.py  temporary.py
src/storix/_sync/backends/: __init__.py  _proto.py  azblob.py  azure.py  base.py  gcs.py  generic.py  local.py  memory.py  opendal.py  s3.py
src/storix/_sync/layers/: __init__.py  base.py  url.py  (+5 more)
src/storix/aio/: __init__.py
src/storix/backends/: __init__.py
src/storix/cli/: __init__.py  app.py  config.py  icons.py  render.py  shell.py  state.py
src/storix/core/: __init__.py  find.py  tree.py  word_count.py
src/storix/providers/: __init__.py  _base.py  _base_tree.py  _proto.py  azure.py  local.py
src/storix/utils/: __init__.py  paths.py  streaming.py  time.py
storix/aio/providers/: _base.py
storix/providers/: _base.py
tests/: test_async_azure.py  test_async_integration.py  test_async_local.py  test_azure.py  test_cli.py  test_enums.py  test_errors.py  test_local.py  test_models.py  test_pathops.py  test_sandbox.py  test_types.py
tests/_async/: test_compat.py  test_core.py  test_factory.py  test_layers.py  test_stream.py  test_temporary.py
tests/_async/backends/: test_azblob.py  test_azure.py  test_backends.py  test_memory.py
tests/_sync/: test_compat.py  test_core.py  test_factory.py  test_layers.py  test_stream.py  test_temporary.py
tests/_sync/backends/: test_azblob.py  test_azure.py  test_backends.py  test_memory.py
tests/automation/: test_release.py  test_workflow_contracts.py
tests/conformance/_async/: test_azure.py  test_backends.py  test_memory.py  test_opendal.py
tests/conformance/_sync/: test_azblob.py  test_azure.py  test_backends.py  test_memory.py  test_opendal.py
tests/legacy/: test_async_azure.py  test_async_integration.py  test_async_local.py  test_azure.py  test_cli.py  test_local.py  test_repl.py
tests/smoke/: __init__.py  azadls.py  azblob.py  cli.py  core.py  distributions.py  gcs.py  missing_extra.py  s3.py
tests/typing/: test_public_api.py
tests/unit/: test_cli.py  test_errors.py  test_public_api.py  test_storage_root_errors.py  test_types.py
tests/unit/_async/: test_compat.py  test_core.py  test_factory.py  test_layers.py  test_stream.py
tests/unit/_sync/: test_compat.py  test_core.py  test_factory.py  test_layers.py  test_stream.py  test_temporary.py
website/: .gitignore  zensical.toml
website/docs/: index.md  release-notes.md
website/docs/get-started/: installation.md  introduction.md  quickstart.md
website/docs/guide/: backends.md  cli.md  layers.md  reading-and-writing.md
website/docs/recipes/: caching.md  custom-backend.md  custom-layer.md  fastapi.md  listing-and-searching.md  object-stores.md  progress.md  settings.md  testing.md  transfers.md
website/docs/reference/: backends.md  errors.md  layers.md  storix.md
website/docs/stylesheets/: extra.css
website/overrides/: main.html
(+8 files in other folders)
