[project]
name = "storix"
version = "0.0.2"
description = "Storage Unix Style for Developers"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Mohanad Ghali", email = "mghalix@gmail.com" }]
keywords = ["storage", "filesystem", "azure", "local", "async", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "loguru",
    "python-magic",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
all = [
    "azure-storage-file-datalake", 
    "rich", 
    "rich-toolkit", 
    "typer",
]
azure = ["azure-storage-file-datalake", "aiohttp"]
cli = ["rich", "rich-toolkit", "typer"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit",
    "types-aiofiles>=24.1.0.20250606", # stub files for mypy
    "coverage>=7.9.2",
    "storix[azure,cli]",
    "pyright>=1.1.407",
    "vulture>=2.14",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/mghalix/storix"
Documentation = "https://github.com/mghalix/storix#readme"
Repository = "https://github.com/mghalix/storix"
Issues = "https://github.com/mghalix/storix/issues"
Changelog = "https://github.com/mghalix/storix/blob/main/release-notes.md"

[project.scripts]
sx = "storix.cli.app:main"

#+-- tools --+#
[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/dist",
    "**/build",
    "**/node_modules",
    "**/venv",
    "**/.venv",
    "**/playground",
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
exclude = []
disable_error_code = []
cache_dir = ".cache/mypy"
show_error_codes = true

[[tool.mypy.overrides]]
module = "samples.*"
follow_imports = "skip"

[tool.pytest.ini_options]
pythonpath = ["src/storix"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
cache_dir = ".cache/pytest"

[tool.ruff]
line-length = 88
target-version = "py313"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
cache-dir = ".cache/ruff"
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload", "abc.abstractmethod"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["storix"]
known-local-folder = ["src"]
known-third-party = ["pydantic", "loguru"]
case-sensitive = true
lines-after-imports = 2
lines-between-types = 1


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "ANN", # type annotations
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff specific rules
    "ISC", # implicit string concat
    "INP", # implicit namespace package
    "RSE", # raise exception parantheses check
    "RET", # flake8-return check
    "SIM", # flake8-simplify check
    "TD",  # todos
    "FIX", # fixme
    "EM",    # flake8-errmsg
    "FURB",  # refurb
    "PGH003",  # blanket type ignore
    "PGH004",  # blanket noqa
]
ignore = [
    "B008",   # Do not perform function call in argument defaults
    "D203",   # 1 blank line required before class docstring
    "D212",   # Multi-line docstring summary should start at the first line
    "D205",   # 1 blank line required between summary line and description
    "ANN401", # allow dynamically typed expressions (typing.Any)
    "D418",   # allow docstring on overloaded function
    "D100",   # allow missing docstring for public functions
    "D103",   # allow missing docstring for public modules
    "D104",   # allow missing docstring in public package
    "D102",   # allow missing docstring in public method
    "D101",   # allow missing docstring in public class
    "D105",   # allow missing docstring in magic method
    "D106",   # allow missing docstring in public nested class
    "D107",   # allow missing docstring in __init__
    "TD002",  # allow missing todo author
    "TD003",  # allow missing link to todo issue
    "FIX002", # allow todo
    #-----------------------#
]


[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "INP", "TD", "ERA001", "RUF", "ANN201"]
"samples/**" = ["D", "INP", "ERA001", "RUF"]

[tool.coverage.html]
show_contexts = true

[tool.coverage.run]
source = ["storix"]
omit = [
    "*/tests/*", 
    "*/test_*", 
    "*/__pycache__/*", 
    "*/venv/*", 
    "*/.venv/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.uv.sources]
storix = { workspace = true }
